Replaced ant with gradle & using l2p v1.2-SNAPSHOT with Java 17